--- a/jxwh/test/index.html
+++ b/jxwh/test/index.html
@@ -27,7 +27,7 @@
   </p>
 
   <p style="text-align:center;">
-    <img src="/images/logo.png" width="50%" alt="" />
+    <img src="../images/logo.png" width="50%" alt="" />
   </p>
   <h3 style="text-align:center;">
     <strong><span>江西危货</span><br />
@@ -37,7 +37,7 @@
   <p style="text-align:center;">
     <strong><a id="download"
         href="itms-services://?action=download-manifest&url=https://ctsn801.gitee.io/test/manifest.plist">
-        <img src="/images/download.png" height="60" alt="" /></a><br />
+        <img src="../images/download.png" height="60" alt="" /></a><br />
     </strong>
   </p>
 
