--- a/jxwh/test/index.html
+++ b/jxwh/test/index.html
@@ -36,7 +36,7 @@
 
   <p style="text-align:center;">
     <strong><a id="download"
-        href="itms-services://?action=download-manifest&url=https://ctsn801.gitee.io/jxwh/test/manifest.plist">
+        href="itms-services://?action=download-manifest&url=https://seebox.github.io/jxwh/test/manifest.plist">
         <img src="../images/download.png" height="60" alt="" /></a><br />
     </strong>
   </p>
