--- a/jxwh/test/index.html
+++ b/jxwh/test/index.html
@@ -36,7 +36,7 @@
 
   <p style="text-align:center;">
     <strong><a id="download"
-        href="itms-services://?action=download-manifest&url=https://seebox.github.io/jxwh/test/manifest.plist">
+        href="itms-services://?action=download-manifest&url=https://ctsn.com.cn/jxwh/test/manifest.plist">
         <img src="../images/download.png" height="60" alt="" /></a><br />
     </strong>
   </p>
@@ -50,7 +50,7 @@
     var iPhone = window.navigator.userAgent.indexOf("iPhone;") != -1;
     var iPad = window.navigator.userAgent.indexOf("iPad;") != -1;
     if (!iPhone && !iPad) {
-      download.href = 'http://10.10.15.213/jxwh.apk';
+      download.href = 'https://ctsn.com.cn/jxwh/test/jxwh.apk';
     } else {
       browserName.innerHTML = 'Safari中';
       trust.innerHTML = '<span >iOS  首次安装要特别信任</span></br><span>安装后，在设置-通用-设备管理,选择China Waterborne Transportation Institute,点击信任</span>';
